align fix

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,7 +4,6 @@ body {
   font-family: helvetica, sans-serif;
   overflow: hidden;
   font-size: 3em;
-  text-align: center;
 }
 canvas {
   width: 1920px;
